K1J-680: Fixed test for reko status filter (#242)